Actualización 1.1